--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-day-picker": "9.0.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
