--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.10",
+    "fast-average-color": "^9.4.0",
     "geist": "^1.3.1",
     "jose": "^5.6.3",
     "lucide-react": "^0.416.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "node-vibrant": "3.2.1-alpha.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-day-picker": "9.0.4",
