--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-table": "^8.19.3",
     "@uploadthing/react": "^6.7.2",
+    "@vercel/flags": "^2.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.10",
     "fast-average-color": "^9.4.0",
+    "framer-motion": "^11.3.24",
     "geist": "^1.3.1",
     "jose": "^5.6.3",
     "lucide-react": "^0.416.0",
