--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.1",
     "@hookform/resolvers": "^3.9.0",
+    "@lucide/lab": "^0.1.2",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
